--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Saurabh\\Anaconda3\\envs\\sampleenv\\python.exe"
+    "python.pythonPath": "C:\\Users\\mkwel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3"
 }
